# gstreamer_examples

./: CMakeLists.txt  README.md  main.cpp  test_pipelines.txt  visvesh.cpp
